[package]
name = "eth_rpc_backend"
version = "0.1.0"
edition = "2021"

[lib]
name = "eth_rpc_backend"
crate-type = ["cdylib"]
path = "src/eth_rpc_backend/lib.rs"

# [[bin]]
# name = "did_gen"
# path = "src/eth_rpc_backend/main.rs"

[dependencies]
ic-cdk = "0.13"
ic-cdk-macros = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
sha3 = "0.10"
rlp = "0.5"
candid = "0.10"
serde_bytes = "0.11.17"
evm_rpc_types = "1.4.0"
